add bower description

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "gridi-components-header-no-1",
-    "description": "",
+    "description": "Gridi Components - Header No 1",
     "main": "",
     "authors": [
         "Przemysław Dziadek <przemyslaw.dziadek@gmail.com>"
